tests/test_typing/bad/err6.catala_en
> Include: common.catala_en

```catala-metadata
declaration scope S2:
  sub scope S
  internal r content boolean
  output a content Enum
```

```catala
scope S:
  definition z equals [
    Structure { -- i: 3 -- e: Int content x };
    Structure { -- i: 4 -- e: y };
    Structure { -- i: 5 -- e: Dat content |1970-01-01| }
  ]
  definition a equals integer_to_decimal of (number of (z ++ z)) /. 2.

scope S2:
  definition sub.x equals 44.
  definition sub.y equals Int content 44
  rule r under condition exists x in sub.z such that x.e with pattern Int
    consequence fulfilled
  definition a equals if r then Int content (number of sub.z) else Dec content 0.0
```


```catala-test {id="err-typecheck"}
catala Typecheck
```

A bug with delayed typechecking can make the above accept the error while it is
still triggered below.

```catala-test {id="err-ocaml"}
catala ocaml
```
